# stm32l4x5_hal

./: .travis.yml  Cargo.toml  README.md
src/: crc.rs  flash.rs  lib.rs  power.rs  timer.rs
src/gpio/: mod.rs  stm32l475vg.rs
src/lcd/: mod.rs  ram.rs
src/rcc/: clocking.rs  mod.rs
src/serial/: mod.rs
src/spi/: mod.rs
