[package]
name = "stm32l4x5-hal"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
keywords = ["arm", "cortex-m", "stm32", "hal", "embedded-hal"]
description = "HAL for the STM32L4x6 family of microcontrollers"
readme = "README.md"
repository = "https://github.com/DoumanAsh/stm32l4x6_hal"
license = "Apache-2.0"
edition = "2018"

[dependencies]
cortex-m = "0.5"
nb = "0.1"

[dependencies.stm32l4]
version = "0.6.0"
features = ["stm32l4x5", "rt"]


[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.void]
default-features = false
version = "1"

[dependencies.cast]
default-features = false
version = "0.2"

# [features]
# rt = ["stm32l4x5/rt"]
# STM32L475VG = []

# [package.metadata.docs.rs]
# features = ["STM32L475VG", "rt"]
